// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EntryDetailsView - Glassmorphic Styling Snapshots (US1) should match snapshot with 12-hour time format 1`] = `
<article
  class="bg-white/70 backdrop-blur-md rounded-2xl shadow-soft-lg p-6 md:p-8 space-y-6 border border-white/20"
>
  <div
    class="border-b border-gray-200/50 pb-6"
  >
    <h1
      class="text-3xl font-bold text-gray-900 mb-4 bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text text-transparent"
    >
      1st of November, 2025
    </h1>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex items-center gap-4 flex-wrap"
      >
        <div>
          <div
            class="text-sm font-medium text-gray-600 mb-2"
          >
            Fasting Duration
          </div>
          <div
            class="text-4xl font-bold bg-gradient-to-r from-purple-600 via-pink-600 to-indigo-600 bg-clip-text text-transparent"
          >
            16h
          </div>
        </div>
      </div>
      <div
        class="text-sm text-gray-700 bg-gradient-to-r from-purple-50 to-pink-50 rounded-lg px-4 py-2 border border-purple-100"
      >
        Eating window: 
        <span
          class="font-semibold text-gray-900"
        >
          8
          h 
        </span>
      </div>
    </div>
  </div>
  <section
    class="bg-gradient-to-br from-purple-50/50 to-indigo-50/50 backdrop-blur-sm rounded-xl p-6 border border-purple-100/50"
  >
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        ⏱️
      </span>
      Fasting Timeline
    </h2>
    <div
      data-testid="fasting-timeline"
    >
      Timeline
    </div>
  </section>
  <section
    aria-label="Entry Insights"
    class="bg-gradient-to-br from-purple-50/50 to-indigo-50/50 backdrop-blur-sm rounded-xl p-6 md:p-8 border border-purple-200/50 shadow-soft space-y-6"
    role="region"
  >
    <h2
      class="text-2xl font-semibold text-gray-900"
    >
      📊 Personalized Insights
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    />
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        🍽️
      </span>
      Meal Times
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-gradient-to-br from-green-50/80 to-emerald-50/80 backdrop-blur-sm rounded-xl p-5 border border-green-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          First Meal
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            data-testid="time-display"
          >
            12:00
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-red-50/80 to-pink-50/80 backdrop-blur-sm rounded-xl p-5 border border-red-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Last Meal
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            data-testid="time-display"
          >
            20:00
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        📊
      </span>
      Health Metrics
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-gradient-to-br from-blue-50/80 to-indigo-50/80 backdrop-blur-sm rounded-xl p-5 border border-blue-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Weight
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-purple-50/80 to-pink-50/80 backdrop-blur-sm rounded-xl p-5 border border-purple-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Sleep Duration
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        😊
      </span>
      Mood & Well-being
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-4"
    >
      <div
        class="bg-gradient-to-br from-purple-50/80 to-violet-50/80 backdrop-blur-sm rounded-xl p-5 border border-purple-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            😋
          </span>
          Hunger Level
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-yellow-50/80 to-amber-50/80 backdrop-blur-sm rounded-xl p-5 border border-yellow-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            ⚡
          </span>
          Energy Level
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          High
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-blue-50/80 to-cyan-50/80 backdrop-blur-sm rounded-xl p-5 border border-blue-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            ✨
          </span>
          Well-being
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        📝
      </span>
      Food Notes
    </h2>
    <div
      class="bg-gradient-to-br from-gray-50/80 to-slate-50/80 backdrop-blur-sm rounded-xl p-5 border border-gray-100/50 shadow-soft"
    >
      <p
        class="text-gray-700 whitespace-pre-wrap leading-relaxed"
      >
        Had a healthy salad for lunch
      </p>
    </div>
  </section>
  <section
    class="border-t border-gray-200/50 pt-6"
  >
    <h3
      class="text-sm font-semibold text-gray-700 mb-3 flex items-center gap-2"
    >
      <span>
        ℹ️
      </span>
      Entry Information
    </h3>
    <div
      data-testid="entry-metadata"
    >
      Metadata
    </div>
  </section>
  <section
    class="border-t border-gray-200/50 pt-6"
  >
    <div
      data-testid="entry-actions"
    >
      Actions
    </div>
  </section>
</article>
`;

exports[`EntryDetailsView - Glassmorphic Styling Snapshots (US1) should match snapshot with extended fast (24+ hours) 1`] = `
<article
  class="bg-white/70 backdrop-blur-md rounded-2xl shadow-soft-lg p-6 md:p-8 space-y-6 border border-white/20"
>
  <div
    class="border-b border-gray-200/50 pb-6"
  >
    <h1
      class="text-3xl font-bold text-gray-900 mb-4 bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text text-transparent"
    >
      1st of November, 2025
    </h1>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex items-center gap-4 flex-wrap"
      >
        <div>
          <div
            class="text-sm font-medium text-gray-600 mb-2"
          >
            Fasting Duration
          </div>
          <div
            class="text-4xl font-bold bg-gradient-to-r from-purple-600 via-pink-600 to-indigo-600 bg-clip-text text-transparent"
          >
            24h
          </div>
        </div>
        <span
          data-testid="badge"
          data-variant="longest-fast"
        >
          🔥 Extended Fast (24+ hours)
        </span>
      </div>
      <div
        class="text-sm text-gray-700 bg-gradient-to-r from-purple-50 to-pink-50 rounded-lg px-4 py-2 border border-purple-100"
      >
        Eating window: 
        <span
          class="font-semibold text-gray-900"
        >
          8
          h 
        </span>
      </div>
    </div>
  </div>
  <section
    class="bg-gradient-to-br from-purple-50/50 to-indigo-50/50 backdrop-blur-sm rounded-xl p-6 border border-purple-100/50"
  >
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        ⏱️
      </span>
      Fasting Timeline
    </h2>
    <div
      data-testid="fasting-timeline"
    >
      Timeline
    </div>
  </section>
  <section
    aria-label="Entry Insights"
    class="bg-gradient-to-br from-purple-50/50 to-indigo-50/50 backdrop-blur-sm rounded-xl p-6 md:p-8 border border-purple-200/50 shadow-soft space-y-6"
    role="region"
  >
    <h2
      class="text-2xl font-semibold text-gray-900"
    >
      📊 Personalized Insights
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    />
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        🍽️
      </span>
      Meal Times
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-gradient-to-br from-green-50/80 to-emerald-50/80 backdrop-blur-sm rounded-xl p-5 border border-green-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          First Meal
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            data-testid="time-display"
          >
            12:00
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-red-50/80 to-pink-50/80 backdrop-blur-sm rounded-xl p-5 border border-red-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Last Meal
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            data-testid="time-display"
          >
            20:00
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        📊
      </span>
      Health Metrics
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-gradient-to-br from-blue-50/80 to-indigo-50/80 backdrop-blur-sm rounded-xl p-5 border border-blue-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Weight
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-purple-50/80 to-pink-50/80 backdrop-blur-sm rounded-xl p-5 border border-purple-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Sleep Duration
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        😊
      </span>
      Mood & Well-being
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-4"
    >
      <div
        class="bg-gradient-to-br from-purple-50/80 to-violet-50/80 backdrop-blur-sm rounded-xl p-5 border border-purple-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            😋
          </span>
          Hunger Level
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-yellow-50/80 to-amber-50/80 backdrop-blur-sm rounded-xl p-5 border border-yellow-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            ⚡
          </span>
          Energy Level
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          High
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-blue-50/80 to-cyan-50/80 backdrop-blur-sm rounded-xl p-5 border border-blue-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            ✨
          </span>
          Well-being
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        📝
      </span>
      Food Notes
    </h2>
    <div
      class="bg-gradient-to-br from-gray-50/80 to-slate-50/80 backdrop-blur-sm rounded-xl p-5 border border-gray-100/50 shadow-soft"
    >
      <p
        class="text-gray-700 whitespace-pre-wrap leading-relaxed"
      >
        Had a healthy salad for lunch
      </p>
    </div>
  </section>
  <section
    class="border-t border-gray-200/50 pt-6"
  >
    <h3
      class="text-sm font-semibold text-gray-700 mb-3 flex items-center gap-2"
    >
      <span>
        ℹ️
      </span>
      Entry Information
    </h3>
    <div
      data-testid="entry-metadata"
    >
      Metadata
    </div>
  </section>
  <section
    class="border-t border-gray-200/50 pt-6"
  >
    <div
      data-testid="entry-actions"
    >
      Actions
    </div>
  </section>
</article>
`;

exports[`EntryDetailsView - Glassmorphic Styling Snapshots (US1) should match snapshot with imperial measurements 1`] = `
<article
  class="bg-white/70 backdrop-blur-md rounded-2xl shadow-soft-lg p-6 md:p-8 space-y-6 border border-white/20"
>
  <div
    class="border-b border-gray-200/50 pb-6"
  >
    <h1
      class="text-3xl font-bold text-gray-900 mb-4 bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text text-transparent"
    >
      1st of November, 2025
    </h1>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex items-center gap-4 flex-wrap"
      >
        <div>
          <div
            class="text-sm font-medium text-gray-600 mb-2"
          >
            Fasting Duration
          </div>
          <div
            class="text-4xl font-bold bg-gradient-to-r from-purple-600 via-pink-600 to-indigo-600 bg-clip-text text-transparent"
          >
            16h
          </div>
        </div>
      </div>
      <div
        class="text-sm text-gray-700 bg-gradient-to-r from-purple-50 to-pink-50 rounded-lg px-4 py-2 border border-purple-100"
      >
        Eating window: 
        <span
          class="font-semibold text-gray-900"
        >
          8
          h 
        </span>
      </div>
    </div>
  </div>
  <section
    class="bg-gradient-to-br from-purple-50/50 to-indigo-50/50 backdrop-blur-sm rounded-xl p-6 border border-purple-100/50"
  >
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        ⏱️
      </span>
      Fasting Timeline
    </h2>
    <div
      data-testid="fasting-timeline"
    >
      Timeline
    </div>
  </section>
  <section
    aria-label="Entry Insights"
    class="bg-gradient-to-br from-purple-50/50 to-indigo-50/50 backdrop-blur-sm rounded-xl p-6 md:p-8 border border-purple-200/50 shadow-soft space-y-6"
    role="region"
  >
    <h2
      class="text-2xl font-semibold text-gray-900"
    >
      📊 Personalized Insights
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    />
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        🍽️
      </span>
      Meal Times
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-gradient-to-br from-green-50/80 to-emerald-50/80 backdrop-blur-sm rounded-xl p-5 border border-green-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          First Meal
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            data-testid="time-display"
          >
            12:00
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-red-50/80 to-pink-50/80 backdrop-blur-sm rounded-xl p-5 border border-red-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Last Meal
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            data-testid="time-display"
          >
            20:00
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        📊
      </span>
      Health Metrics
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-gradient-to-br from-blue-50/80 to-indigo-50/80 backdrop-blur-sm rounded-xl p-5 border border-blue-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Weight
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-purple-50/80 to-pink-50/80 backdrop-blur-sm rounded-xl p-5 border border-purple-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Sleep Duration
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        😊
      </span>
      Mood & Well-being
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-4"
    >
      <div
        class="bg-gradient-to-br from-purple-50/80 to-violet-50/80 backdrop-blur-sm rounded-xl p-5 border border-purple-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            😋
          </span>
          Hunger Level
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-yellow-50/80 to-amber-50/80 backdrop-blur-sm rounded-xl p-5 border border-yellow-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            ⚡
          </span>
          Energy Level
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          High
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-blue-50/80 to-cyan-50/80 backdrop-blur-sm rounded-xl p-5 border border-blue-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            ✨
          </span>
          Well-being
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        📝
      </span>
      Food Notes
    </h2>
    <div
      class="bg-gradient-to-br from-gray-50/80 to-slate-50/80 backdrop-blur-sm rounded-xl p-5 border border-gray-100/50 shadow-soft"
    >
      <p
        class="text-gray-700 whitespace-pre-wrap leading-relaxed"
      >
        Had a healthy salad for lunch
      </p>
    </div>
  </section>
  <section
    class="border-t border-gray-200/50 pt-6"
  >
    <h3
      class="text-sm font-semibold text-gray-700 mb-3 flex items-center gap-2"
    >
      <span>
        ℹ️
      </span>
      Entry Information
    </h3>
    <div
      data-testid="entry-metadata"
    >
      Metadata
    </div>
  </section>
  <section
    class="border-t border-gray-200/50 pt-6"
  >
    <div
      data-testid="entry-actions"
    >
      Actions
    </div>
  </section>
</article>
`;

exports[`EntryDetailsView - Glassmorphic Styling Snapshots (US1) should match snapshot with long food notes 1`] = `
<article
  class="bg-white/70 backdrop-blur-md rounded-2xl shadow-soft-lg p-6 md:p-8 space-y-6 border border-white/20"
>
  <div
    class="border-b border-gray-200/50 pb-6"
  >
    <h1
      class="text-3xl font-bold text-gray-900 mb-4 bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text text-transparent"
    >
      1st of November, 2025
    </h1>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex items-center gap-4 flex-wrap"
      >
        <div>
          <div
            class="text-sm font-medium text-gray-600 mb-2"
          >
            Fasting Duration
          </div>
          <div
            class="text-4xl font-bold bg-gradient-to-r from-purple-600 via-pink-600 to-indigo-600 bg-clip-text text-transparent"
          >
            16h
          </div>
        </div>
      </div>
      <div
        class="text-sm text-gray-700 bg-gradient-to-r from-purple-50 to-pink-50 rounded-lg px-4 py-2 border border-purple-100"
      >
        Eating window: 
        <span
          class="font-semibold text-gray-900"
        >
          8
          h 
        </span>
      </div>
    </div>
  </div>
  <section
    class="bg-gradient-to-br from-purple-50/50 to-indigo-50/50 backdrop-blur-sm rounded-xl p-6 border border-purple-100/50"
  >
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        ⏱️
      </span>
      Fasting Timeline
    </h2>
    <div
      data-testid="fasting-timeline"
    >
      Timeline
    </div>
  </section>
  <section
    aria-label="Entry Insights"
    class="bg-gradient-to-br from-purple-50/50 to-indigo-50/50 backdrop-blur-sm rounded-xl p-6 md:p-8 border border-purple-200/50 shadow-soft space-y-6"
    role="region"
  >
    <h2
      class="text-2xl font-semibold text-gray-900"
    >
      📊 Personalized Insights
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    />
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        🍽️
      </span>
      Meal Times
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-gradient-to-br from-green-50/80 to-emerald-50/80 backdrop-blur-sm rounded-xl p-5 border border-green-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          First Meal
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            data-testid="time-display"
          >
            12:00
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-red-50/80 to-pink-50/80 backdrop-blur-sm rounded-xl p-5 border border-red-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Last Meal
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            data-testid="time-display"
          >
            20:00
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        📊
      </span>
      Health Metrics
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-gradient-to-br from-blue-50/80 to-indigo-50/80 backdrop-blur-sm rounded-xl p-5 border border-blue-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Weight
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-purple-50/80 to-pink-50/80 backdrop-blur-sm rounded-xl p-5 border border-purple-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Sleep Duration
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        😊
      </span>
      Mood & Well-being
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-4"
    >
      <div
        class="bg-gradient-to-br from-purple-50/80 to-violet-50/80 backdrop-blur-sm rounded-xl p-5 border border-purple-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            😋
          </span>
          Hunger Level
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-yellow-50/80 to-amber-50/80 backdrop-blur-sm rounded-xl p-5 border border-yellow-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            ⚡
          </span>
          Energy Level
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          High
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-blue-50/80 to-cyan-50/80 backdrop-blur-sm rounded-xl p-5 border border-blue-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            ✨
          </span>
          Well-being
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        📝
      </span>
      Food Notes
    </h2>
    <div
      class="bg-gradient-to-br from-gray-50/80 to-slate-50/80 backdrop-blur-sm rounded-xl p-5 border border-gray-100/50 shadow-soft"
    >
      <div>
        <p
          class="text-gray-700 whitespace-pre-wrap leading-relaxed"
        >
          This is a very long food note that exceeds 300 characters. This is a very long food note that exceeds 300 characters. This is a very long food note that exceeds 300 characters. This is a very long food note that exceeds 300 characters. This is a very long food note that exceeds 300 characters. This ...
        </p>
        <button
          aria-expanded="false"
          class="mt-3 text-purple-600 hover:text-purple-700 font-medium text-sm transition-colors flex items-center gap-1"
        >
          <span>
            Read more
          </span>
          <svg
            class="w-4 h-4"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 9l-7 7-7-7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </section>
  <section
    class="border-t border-gray-200/50 pt-6"
  >
    <h3
      class="text-sm font-semibold text-gray-700 mb-3 flex items-center gap-2"
    >
      <span>
        ℹ️
      </span>
      Entry Information
    </h3>
    <div
      data-testid="entry-metadata"
    >
      Metadata
    </div>
  </section>
  <section
    class="border-t border-gray-200/50 pt-6"
  >
    <div
      data-testid="entry-actions"
    >
      Actions
    </div>
  </section>
</article>
`;

exports[`EntryDetailsView - Glassmorphic Styling Snapshots (US1) should match snapshot with minimal data (optional fields null) 1`] = `
<article
  class="bg-white/70 backdrop-blur-md rounded-2xl shadow-soft-lg p-6 md:p-8 space-y-6 border border-white/20"
>
  <div
    class="border-b border-gray-200/50 pb-6"
  >
    <h1
      class="text-3xl font-bold text-gray-900 mb-4 bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text text-transparent"
    >
      1st of November, 2025
    </h1>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex items-center gap-4 flex-wrap"
      >
        <div>
          <div
            class="text-sm font-medium text-gray-600 mb-2"
          >
            Fasting Duration
          </div>
          <div
            class="text-4xl font-bold bg-gradient-to-r from-purple-600 via-pink-600 to-indigo-600 bg-clip-text text-transparent"
          >
            16h
          </div>
        </div>
      </div>
      <div
        class="text-sm text-gray-700 bg-gradient-to-r from-purple-50 to-pink-50 rounded-lg px-4 py-2 border border-purple-100"
      >
        Eating window: 
        <span
          class="font-semibold text-gray-900"
        >
          8
          h 
        </span>
      </div>
    </div>
  </div>
  <section
    class="bg-gradient-to-br from-purple-50/50 to-indigo-50/50 backdrop-blur-sm rounded-xl p-6 border border-purple-100/50"
  >
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        ⏱️
      </span>
      Fasting Timeline
    </h2>
    <div
      data-testid="fasting-timeline"
    >
      Timeline
    </div>
  </section>
  <section
    aria-label="Entry Insights"
    class="bg-gradient-to-br from-purple-50/50 to-indigo-50/50 backdrop-blur-sm rounded-xl p-6 md:p-8 border border-purple-200/50 shadow-soft space-y-6"
    role="region"
  >
    <h2
      class="text-2xl font-semibold text-gray-900"
    >
      📊 Personalized Insights
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    />
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        🍽️
      </span>
      Meal Times
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-gradient-to-br from-green-50/80 to-emerald-50/80 backdrop-blur-sm rounded-xl p-5 border border-green-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          First Meal
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            data-testid="time-display"
          >
            12:00
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-red-50/80 to-pink-50/80 backdrop-blur-sm rounded-xl p-5 border border-red-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Last Meal
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            data-testid="time-display"
          >
            20:00
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        📊
      </span>
      Health Metrics
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-gradient-to-br from-blue-50/80 to-indigo-50/80 backdrop-blur-sm rounded-xl p-5 border border-blue-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Weight
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-purple-50/80 to-pink-50/80 backdrop-blur-sm rounded-xl p-5 border border-purple-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Sleep Duration
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        😊
      </span>
      Mood & Well-being
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-4"
    >
      <div
        class="bg-gradient-to-br from-purple-50/80 to-violet-50/80 backdrop-blur-sm rounded-xl p-5 border border-purple-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            😋
          </span>
          Hunger Level
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-yellow-50/80 to-amber-50/80 backdrop-blur-sm rounded-xl p-5 border border-yellow-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            ⚡
          </span>
          Energy Level
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          High
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-blue-50/80 to-cyan-50/80 backdrop-blur-sm rounded-xl p-5 border border-blue-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            ✨
          </span>
          Well-being
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        📝
      </span>
      Food Notes
    </h2>
    <div
      class="bg-gradient-to-br from-gray-50/80 to-slate-50/80 backdrop-blur-sm rounded-xl p-5 border border-gray-100/50 shadow-soft"
    >
      <p
        class="text-gray-400 italic"
      >
        No food notes logged for this entry
      </p>
    </div>
  </section>
  <section
    class="border-t border-gray-200/50 pt-6"
  >
    <h3
      class="text-sm font-semibold text-gray-700 mb-3 flex items-center gap-2"
    >
      <span>
        ℹ️
      </span>
      Entry Information
    </h3>
    <div
      data-testid="entry-metadata"
    >
      Metadata
    </div>
  </section>
  <section
    class="border-t border-gray-200/50 pt-6"
  >
    <div
      data-testid="entry-actions"
    >
      Actions
    </div>
  </section>
</article>
`;

exports[`EntryDetailsView - Glassmorphic Styling Snapshots (US1) should match snapshot with standard entry 1`] = `
<article
  class="bg-white/70 backdrop-blur-md rounded-2xl shadow-soft-lg p-6 md:p-8 space-y-6 border border-white/20"
>
  <div
    class="border-b border-gray-200/50 pb-6"
  >
    <h1
      class="text-3xl font-bold text-gray-900 mb-4 bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text text-transparent"
    >
      1st of November, 2025
    </h1>
    <div
      class="flex flex-col gap-4"
    >
      <div
        class="flex items-center gap-4 flex-wrap"
      >
        <div>
          <div
            class="text-sm font-medium text-gray-600 mb-2"
          >
            Fasting Duration
          </div>
          <div
            class="text-4xl font-bold bg-gradient-to-r from-purple-600 via-pink-600 to-indigo-600 bg-clip-text text-transparent"
          >
            16h
          </div>
        </div>
      </div>
      <div
        class="text-sm text-gray-700 bg-gradient-to-r from-purple-50 to-pink-50 rounded-lg px-4 py-2 border border-purple-100"
      >
        Eating window: 
        <span
          class="font-semibold text-gray-900"
        >
          8
          h 
        </span>
      </div>
    </div>
  </div>
  <section
    class="bg-gradient-to-br from-purple-50/50 to-indigo-50/50 backdrop-blur-sm rounded-xl p-6 border border-purple-100/50"
  >
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        ⏱️
      </span>
      Fasting Timeline
    </h2>
    <div
      data-testid="fasting-timeline"
    >
      Timeline
    </div>
  </section>
  <section
    aria-label="Entry Insights"
    class="bg-gradient-to-br from-purple-50/50 to-indigo-50/50 backdrop-blur-sm rounded-xl p-6 md:p-8 border border-purple-200/50 shadow-soft space-y-6"
    role="region"
  >
    <h2
      class="text-2xl font-semibold text-gray-900"
    >
      📊 Personalized Insights
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    />
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        🍽️
      </span>
      Meal Times
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-gradient-to-br from-green-50/80 to-emerald-50/80 backdrop-blur-sm rounded-xl p-5 border border-green-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          First Meal
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            data-testid="time-display"
          >
            12:00
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-red-50/80 to-pink-50/80 backdrop-blur-sm rounded-xl p-5 border border-red-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Last Meal
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            data-testid="time-display"
          >
            20:00
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        📊
      </span>
      Health Metrics
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="bg-gradient-to-br from-blue-50/80 to-indigo-50/80 backdrop-blur-sm rounded-xl p-5 border border-blue-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Weight
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-purple-50/80 to-pink-50/80 backdrop-blur-sm rounded-xl p-5 border border-purple-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2"
        >
          Sleep Duration
        </div>
        <div
          class="text-2xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        😊
      </span>
      Mood & Well-being
    </h2>
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-4"
    >
      <div
        class="bg-gradient-to-br from-purple-50/80 to-violet-50/80 backdrop-blur-sm rounded-xl p-5 border border-purple-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            😋
          </span>
          Hunger Level
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-yellow-50/80 to-amber-50/80 backdrop-blur-sm rounded-xl p-5 border border-yellow-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            ⚡
          </span>
          Energy Level
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          High
        </div>
      </div>
      <div
        class="bg-gradient-to-br from-blue-50/80 to-cyan-50/80 backdrop-blur-sm rounded-xl p-5 border border-blue-100/50 shadow-soft"
      >
        <div
          class="text-sm font-medium text-gray-600 mb-2 flex items-center gap-1"
        >
          <span>
            ✨
          </span>
          Well-being
        </div>
        <div
          class="text-xl font-bold text-gray-900"
        >
          <span
            class="text-gray-400"
          >
            Not logged
          </span>
        </div>
      </div>
    </div>
  </section>
  <section>
    <h2
      class="text-lg font-semibold text-gray-900 mb-4 flex items-center gap-2"
    >
      <span>
        📝
      </span>
      Food Notes
    </h2>
    <div
      class="bg-gradient-to-br from-gray-50/80 to-slate-50/80 backdrop-blur-sm rounded-xl p-5 border border-gray-100/50 shadow-soft"
    >
      <p
        class="text-gray-700 whitespace-pre-wrap leading-relaxed"
      >
        Had a healthy salad for lunch
      </p>
    </div>
  </section>
  <section
    class="border-t border-gray-200/50 pt-6"
  >
    <h3
      class="text-sm font-semibold text-gray-700 mb-3 flex items-center gap-2"
    >
      <span>
        ℹ️
      </span>
      Entry Information
    </h3>
    <div
      data-testid="entry-metadata"
    >
      Metadata
    </div>
  </section>
  <section
    class="border-t border-gray-200/50 pt-6"
  >
    <div
      data-testid="entry-actions"
    >
      Actions
    </div>
  </section>
</article>
`;
